examples/fail/assign_nonvar_lhs.hax
module ZZZ::AssignNonVarLhs;

sub main() -> Int {
  main() := 1;
  return 0;
}
